--- a/.gitignore
+++ b/.gitignore
@@ -4,18 +4,22 @@ logs
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
 # Coverage directory used by tools like istanbul
 coverage
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
-build
+packages/*/build
 
 # Dependency directories
 node_modules/
+packages/*/node_modules
 
-# Optional npm cache directory
+
+# Optional cache directories
 .npm
+.pnpm-store
 
 # Optional eslint cache
 .eslintcache
@@ -25,6 +29,7 @@ node_modules/
 
 # Output of `wp-scripts plugin-zip`
 *.zip
+releases/*.zip
 
 # dotenv environment variables file
 .env
