add welcome, feature pages as well as version control

--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
 		"build": "pnpm --recursive --parallel run build",
 		"build:galleryberg": "pnpm --filter @galleryberg/galleryberg-gallery-block run build",
 		"build:pro": "pnpm --filter @galleryberg/galleryberg-gallery-block-pro run build",
-		"build:all": "pnpm run build:galleryberg && pnpm run build:pro",
+		"build:admin": "pnpm --filter @galleryberg/admin run build",
+		"build:all": "pnpm run build:admin && pnpm run build:galleryberg && pnpm run build:pro",
 		"start:galleryberg": "pnpm --filter @galleryberg/galleryberg-gallery-block run start",
 		"start:pro": "pnpm --filter @galleryberg/galleryberg-gallery-block-pro run start",
+		"start:admin": "pnpm --filter @galleryberg/admin run dev",
 		"format": "pnpm --recursive run format",
 		"lint": "pnpm --recursive run lint",
 		"lint:js": "pnpm --recursive run lint:js",
@@ -21,8 +23,8 @@
 		"clean:build": "rm -rf packages/*/build",
 		"clean:zip": "rm -rf packages/*/*.zip releases/*.zip",
 		"prezip": "pnpm run clean:zip && mkdir -p releases",
-		"zip:galleryberg": "pnpm run build:galleryberg && cd packages/galleryberg-gallery-block && zip -r ../../releases/galleryberg-gallery-block.zip . -x '*.git*' 'node_modules/*' 'src/*' 'package*.json' 'pnpm-lock.yaml' 'composer.json' 'composer.lock' 'README.md' 'webpack.config.js' '.DS_Store' '*.log'",
-		"zip:pro": "pnpm run build:pro && cd packages/galleryberg-gallery-block-pro && zip -r ../../releases/galleryberg-gallery-block-pro.zip . -x '*.git*' 'node_modules/*' 'src/*' 'package*.json' 'pnpm-lock.yaml' 'composer.json' 'composer.lock' 'README.md' 'webpack.config.js' '.DS_Store' '*.log'",
+		"zip:galleryberg": "pnpm run build:admin && pnpm run build:galleryberg && cd packages/galleryberg-gallery-block && zip -r ../../releases/galleryberg-gallery-block.zip . -x '*.git*' 'node_modules/*' 'src/*' 'package*.json' 'pnpm-lock.yaml' 'composer.json' 'composer.lock' 'README.md' 'webpack.config.js' '.DS_Store' '*.log'",
+		"zip:pro": "pnpm run build:admin && pnpm run build:pro && cd packages/galleryberg-gallery-block-pro && zip -r ../../releases/galleryberg-gallery-block-pro.zip . -x '*.git*' 'node_modules/*' 'src/*' 'package*.json' 'pnpm-lock.yaml' 'composer.json' 'composer.lock' 'README.md' 'webpack.config.js' '.DS_Store' '*.log'",
 		"zip:both": "pnpm run prezip && pnpm run build:all && pnpm run zip:galleryberg && pnpm run zip:pro && echo '\\n✅ ZIP files created in releases/ folder'",
 		"zip:all": "pnpm run zip:both",
 		"release": "pnpm run lint && pnpm run build:all && pnpm run zip:both"
